tests/fixtures/invalid/duplicate_fields.avsc
{
  "type": "record",
  "name": "User",
  "fields": [
    {"name": "id", "type": "int"},
    {"name": "username", "type": "string"},
    {"name": "id", "type": "long"}
  ]
}
